--- a/QaLegend/test-output/old/QaLegend Suite/Chrome Test.properties
+++ b/QaLegend/test-output/old/QaLegend Suite/Chrome Test.properties
@@ -1,1 +1,1 @@
-[SuiteResult context=Chrome Test]
+[SuiteResult context=Chrome Test][SuiteResult context=Edge Test][SuiteResult context=Firefox Test]
