Test cases updated with wait utility and description added for all test cases.

--- a/QaLegend/test-output/old/QaLegend Suite/LoginPage Test.properties
+++ b/QaLegend/test-output/old/QaLegend Suite/LoginPage Test.properties
@@ -1,1 +1,1 @@
-[SuiteResult context=LoginPage Test][SuiteResult context=HomePage Test][SuiteResult context=UserManagementPage Test]
+[SuiteResult context=HomePage Test][SuiteResult context=LoginPage Test][SuiteResult context=ResetPage Test]
